<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.raulmora.contactos.ConfirmarDatos">

    <TextView
        android:id="@+id/tvCabecera_ConfirmarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCabecera_ConfirmarDatos"
        android:textSize="@dimen/confirmarDatos"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNombre"
        android:layout_below="@id/tvCabecera_ConfirmarDatos"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvFechaNac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvfechaNac"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTelefono"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telf"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvEmail"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDescripcion"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripc"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnEditarContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEditar"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
