<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.raulmora.contactos.MainActivity"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nombreContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_username"/>

    </android.support.design.widget.TextInputLayout>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="@dimen/datepicker_width"
        android:layout_height="@dimen/datepicker_height"
        android:layout_gravity="center_horizontal"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/telefono">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/num_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_telefono"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/form_email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descripContacto">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/descrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/form_descripContacto"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_siguiente"
        android:id="@+id/boton_siguiente" />


</LinearLayout>
